# hebrew-dates-demo

./: .gitignore  LICENSE  README.md  hdate_demo_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
assets/: icon.icns
